improve android compatibility